TDD1 构架了一半的api

--- a/linux_driver/ADC_TDD/Makefile
+++ b/linux_driver/ADC_TDD/Makefile
@@ -1,6 +1,6 @@
 obj-m := adc_drv.o
 ifneq ($(KERNELRELEASE),)
-EXTRA_CFLAGS += -Wno-error=date-time
+#EXTRA_CFLAGS += -Wno-error=date-time
 else
 	KERNELDIR ?= /lib/modules/$(shell uname -r)/build
     override LDFLAGS=
